# bite

./: README.md  pyproject.toml  r1_shader_params.json  requirements.txt  test_pvr.py  test_render.py  viewer.py
.github/workflows/: python-tests.yml
bite/: __init__.py  base.py  dds.py  matl.py  pvr.py  utils.py  view.py  vms.py  vmt.py  vtf.py
bite/decode/: __init__.py  dxt.py  s3tc.py  twiddle.py  vq.py
bite/materials/: __init__.py  base.py  matl.py  vmt.py
bite/pixel/: __init__.py  base.py  convert.py  shuffle_rgb.py
bite/pixels/: __init__.py  base.py  shuffle_rgb.py
bite/render/: __init__.py  base.py  texture.py
bite/render/shaders/: basic.fragment.glsl
bite/render/shaders/vertex/: basic_2d.glsl
bite/textures/: __init__.py  base.py  dds.py  pvr.py  vms.py  vtf.py
tests/: test_vmt.py
tests/files/: tv.vmt
tests/pixel/: test_base.py
tests/pixels/: test_base.py
